// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tests from RegistrationPage > should find emailInput data-testid 1`] = `"example@gmail.com"`;

exports[`tests from RegistrationPage > should find fullNameInput data-testid 1`] = `"exampleFullName"`;

exports[`tests from RegistrationPage > should find registrationMainText data-testid  1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-h5 text-bold"
    data-testid="registrationMainText"
    data-v-6282d38c=""
  >
     Create account with email 
  </p>,
}
`;

exports[`tests from RegistrationPage > should find registrationSubText data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-body2"
    data-testid="registrationSubText"
    data-v-6282d38c=""
  >
     Enter your details below to create your account 
  </p>,
}
`;
